name:                json-parser

version:             0.2.0.0

synopsis:            JSON parsing library based on alex and happy
license:             BSD3
author:              Dimitri DeFigueiredo
maintainer:          defigueiredo@ucdavis.edu
category:            Text
build-type:          Simple

extra-source-files:  JsonLexer.x, JsonParser.y

cabal-version:       >=1.20

library
  hs-source-dirs:     src
  exposed-modules:    JsonLexer, JsonParser

  build-depends:      base  >= 4.8
                    , array >= 0.5
                    , unordered-containers >= 0.2
                    , deepseq >= 1.4

  build-tools:        alex, happy

  default-language:   Haskell2010
  other-extensions:   CPP
